Refactor AI Test Suggestions workflow for debugging
Updated the AI Test Suggestions workflow to include debugging information, improved error handling, and modified steps for better clarity.

--- a/.github/workflows/ai-test-suggestions.yml
+++ b/.github/workflows/ai-test-suggestions.yml
@@ -1,23 +1,48 @@
-name: AI Test Suggestions
+name: AI Test Suggestions (debug)
 
 on:
   pull_request:
     types: [opened, synchronize]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   ai-test-suggestions:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v4
+
+      - name: Show environment info
+        run: |
+          echo "GITHUB_REPOSITORY=${GITHUB_REPOSITORY}"
+          echo "PR_NUMBER=${{ github.event.pull_request.number }}"
+          echo "PR_HEAD=${{ github.event.pull_request.head.ref }}"
+          echo "PR_BASE=${{ github.event.pull_request.base.ref }}"
+          echo "AI_SERVICE_URL=${{ secrets.AI_SERVICE_URL }}"
+          env
 
       - name: Fetch PR diff
         run: |
-          git fetch origin ${{ github.base_ref }} || true
-          git diff origin/${{ github.base_ref }}...${{ github.head_ref }} > pr_diff.txt
-          echo "Saved diff to pr_diff.txt"
+          set -x
+          git fetch origin ${{ github.event.pull_request.base.ref }} || true
+          git diff origin/${{ github.event.pull_request.base.ref }}...${{ github.event.pull_request.head.ref }} > pr_diff.txt
+          echo "---- PR DIFF START ----"
+          sed -n '1,200p' pr_diff.txt || true
+          echo "---- PR DIFF END ----"
 
-      - name: Call AI service and post comment
+      - name: Test AI service connectivity (curl)
+        env:
+          AI_SERVICE_URL: ${{ secrets.AI_SERVICE_URL }}
+        run: |
+          echo "Testing AI service URL..."
+          curl -v --max-time 20 "${AI_SERVICE_URL}/generate-tests" -H "Content-Type: application/json" -d '{"diff":"test","language":"python","framework":"pytest"}' || true
+          echo "curl exit code: $?"
+
+      - name: Call AI service and post comment (with response preview)
         env:
           AI_SERVICE_URL: ${{ secrets.AI_SERVICE_URL }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,30 +54,32 @@ import os, requests, sys
 repo = os.environ['REPO']
 pr_number = os.environ['PR_NUMBER']
 api_url = os.environ['AI_SERVICE_URL'].rstrip('/') + '/generate-tests'
-
 with open('pr_diff.txt') as f:
     diff = f.read()
-
+print("Calling AI service:", api_url)
 try:
-    resp = requests.post(api_url, json={"diff": diff, "language":"python", "framework":"pytest"}, timeout=120)
+    r = requests.post(api_url, json={"diff": diff, "language":"python","framework":"pytest"}, timeout=120)
 except Exception as e:
     print("ERROR calling AI service:", e)
-    sys.exit(1)
-
-if resp.status_code != 200:
-    print("AI service returned non-200:", resp.status_code, resp.text)
-    sys.exit(1)
-
-suggestions = resp.json().get('suggestions_markdown','')
-# Truncate if too long (GitHub comments have limits)
-max_len = 64000
-if len(suggestions) > max_len:
-    suggestions = suggestions[:max_len] + "\n\n*(truncated)*"
-
+    sys.exit(2)
+print("AI service status:", r.status_code)
+if r.status_code != 200:
+    print("AI response text (non-200):")
+    print(r.text)
+    sys.exit(3)
+data = r.json()
+s = data.get('suggestions_markdown', '')
+preview = s[:4000]
+print("=== AI SUGGESTION PREVIEW ===")
+print(preview)
+print("=== END PREVIEW ===")
+# Post comment
 comment_url = f"https://api.github.com/repos/{repo}/issues/{pr_number}/comments"
-r = requests.post(comment_url,
-                   headers={"Authorization": f"Bearer {os.environ['GITHUB_TOKEN']}", "Accept": "application/vnd.github+json"},
-                   json={"body": suggestions})
-r.raise_for_status()
-print("Posted comment:", r.json().get("html_url"))
+resp = requests.post(comment_url,
+                     headers={"Authorization":f"Bearer {os.environ['GITHUB_TOKEN']}", "Accept":"application/vnd.github+json"},
+                     json={"body": s})
+print("Posted comment status:", resp.status_code)
+print("Posted comment response:", resp.text)
+if resp.status_code >= 400:
+    sys.exit(4)
 PY
